--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "graphql": "^16.8.1",
     "graphql-ws": "^5.16.0",
     "lodash": "^4.17.21",
+    "mathjs": "^12.4.1",
+    "numjs": "^0.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
